--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -178,6 +178,14 @@ body {
   }
 }
 
+.welcome {
+  background-color: $coal;
+  padding: 1rem;
+  width: 75vw;
+  margin: 1rem auto 0 auto;
+  border-radius: 0.25rem;
+}
+
 @import '../../../node_modules/bulma/sass/utilities/_all.sass';
 @import '../../../node_modules/bulma/sass/components/_all.sass';
 @import '../../../node_modules/bulma/sass/base/_all.sass';
